# DocIntel

./: .env.example  .gitignore  Dockerfile.api  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run_server.py
docintel/: __init__.py  _config.py  _pipeline.py  lightrag_index.py  logging.py  metrics.py
docintel/core/: __init__.py  entities.py
docintel/extractors/: __init__.py  csv_extractor.py  docx.py  html.py  image.py  pdf.py  pptx.py  text.py  xlsx.py
docintel/llm/: __init__.py  anthropic_client.py  base.py  gemini.py  nvidia_client.py  ollama_client.py  openai_client.py
docintel/processing/: __init__.py  chunker.py  embedder.py
docintel/server/: __main__.py  app.py  auth.py  auth_routes.py  db.py  deps.py  middleware.py  org_routes.py  pipeline_registry.py  routes.py  schemas.py  superadmin_routes.py
docintel/storage/: __init__.py  base.py  memory.py  pgvector.py
docintel/storage/migrations/: 001_init.sql  002_auth.sql  003_multi_keys.sql  004_pipeline_mode.sql
examples/: basic_usage.py
tests/: conftest.py  test_chunker.py  test_chunker_edge.py  test_config.py  test_extractors.py  test_gemini_retry.py  test_logging.py  test_memory_concurrent.py  test_memory_store.py  test_pgvector_store.py  test_pipeline_errors.py  test_pipeline_helpers.py  test_server.py  test_workflow.py
web/: package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/admin/: layout.tsx  page.tsx
web/src/app/admin/settings/: page.tsx
web/src/app/admin/users/: page.tsx
web/src/app/app/: layout.tsx  page.tsx
web/src/app/app/ask/: page.tsx
web/src/app/app/documents/: page.tsx
web/src/app/app/graph/: page.tsx
web/src/app/app/history/: page.tsx
web/src/app/app/search/: page.tsx
web/src/app/invite/[token]/: page.tsx
web/src/app/login/: page.tsx
web/src/app/register/: page.tsx
web/src/app/superadmin/: layout.tsx  page.tsx
web/src/app/superadmin/orgs/: page.tsx
web/src/app/superadmin/users/: page.tsx
web/src/components/layout/: Sidebar.tsx
web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Markdown.tsx  Toaster.tsx
web/src/contexts/: toast-context.tsx
web/src/lib/: api.ts  auth.tsx
web/src/types/: index.ts
