[project]
name = "docintel"
version = "0.1.0"
description = "Industrial Document Analysis Framework — ingest, chunk, embed, and query documents with one import."
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
keywords = ["document-analysis", "rag", "llm", "ocr", "industrial", "ai"]

dependencies = [
    "google-genai>=1.0.0",
    "pypdf>=4.0.0",
    "numpy>=1.24.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
ocr  = ["python-doctr[torch]>=0.9.0"]
cad  = ["ezdxf>=1.3.0"]
postgres = ["psycopg2-binary>=2.9.0", "pgvector>=0.2.0"]
dev  = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docintel"]

[tool.ruff]
line-length = 100
target-version = "py39"
