[project]
name = "docintel"
version = "0.1.0"
description = "Industrial Document Analysis Framework — ingest, chunk, embed, and query documents with one import."
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["document-analysis", "rag", "llm", "ocr", "industrial", "ai"]

dependencies = [
    "google-genai>=1.0.0",
    "pypdf>=4.0.0",
    "numpy>=1.24.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
ocr        = ["pytesseract>=0.3.10", "Pillow>=10.0.0", "pdf2image>=1.16.0"]
cad        = ["ezdxf>=1.3.0"]
postgres   = ["psycopg2-binary>=2.9.0", "pgvector>=0.3.0"]
office     = ["python-docx>=1.1", "openpyxl>=3.1", "python-pptx>=0.6", "beautifulsoup4>=4.12"]
server     = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9",
              "python-jose[cryptography]>=3.3",
              "bcrypt>=4.0",
              "cryptography>=41.0",
              "email-validator>=2.0"]
openai     = ["openai>=1.30"]
anthropic  = ["anthropic>=0.20"]
graph      = ["lightrag-hku>=1.3"]
dev        = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docintel"]

[project.scripts]
docintel-server = "docintel.server.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py310"
